infra_tf/envoy.yaml
static_resources:
  listeners:
    - name: ingress_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                request_timeout: 15s
                stream_idle_timeout: 30s
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: platform_backend
                      domains: ["*"]
                      response_headers_to_add:
                        - append_action: OVERWRITE_IF_EXISTS_OR_ADD
                          header:
                            key: x-content-type-options
                            value: nosniff
                      routes:
                        - match:
                            path: /health
                          direct_response:
                            status: 200
                            body:
                              inline_string: '{"status":"ok"}'
                        - match:
                            prefix: /api/v1/analytics/stats
                          route:
                            cluster: analytics_service
                            prefix_rewrite: /stats
                        - match:
                            prefix: /api/v1/shorten
                          route:
                            cluster: shortener_service
                            prefix_rewrite: /shorten
                        - match:
                            prefix: /api/v1/urls/
                          route:
                            cluster: shortener_service
                            prefix_rewrite: /urls/
                        - match:
                            prefix: /r/
                          route:
                            cluster: shortener_service
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: ingress_rate_limiter
                      token_bucket:
                        max_tokens: 200
                        tokens_per_fill: 100
                        fill_interval: 1s
                      filter_enabled:
                        runtime_key: local_rate_limit_enabled
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      filter_enforced:
                        runtime_key: local_rate_limit_enforced
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: shortener_service
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: shortener_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: shortener
                      port_value: 8001
    - name: analytics_service
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: analytics_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: analytics
                      port_value: 8003
overload_manager:
  resource_monitors:
    - name: envoy.resource_monitors.global_downstream_max_connections
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
        max_active_downstream_connections: 1000
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
